--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -100,7 +100,10 @@
     <Compile Include="T01_StartSettingTests\T10_CreateWarehouseAndShopTests.cs" />
     <Compile Include="T02_UserTests\CalculatorOverSizeTests.cs" />
     <Compile Include="T02_UserTests\OrderCancelTests.cs" />
+    <Compile Include="T02_UserTests\OrderCourirsEditingRouteTests.cs" />
+    <Compile Include="T02_UserTests\OrderSelfEditingRouteTests.cs" />
     <Compile Include="T03_ApiTests\OrderEditingSendTests.cs" />
+    <Compile Include="T03_ApiTests\OrderWihtIdTests.cs" />
     <Compile Include="T03_ApiTests\ShopDeliveryCompanyTests.cs" />
     <Compile Include="T03_ApiTests\ShopPickupCompanyTests.cs" />
     <Compile Include="T03_ApiTests\OrderStatusFullTests.cs" />
