--- a/Autotests.Suites/Autotests.Tests.csproj
+++ b/Autotests.Suites/Autotests.Tests.csproj
@@ -102,9 +102,11 @@
     <Compile Include="T02_UserTests\OrderCancelTests.cs" />
     <Compile Include="T02_UserTests\OrderCourirsEditingRouteTests.cs" />
     <Compile Include="T02_UserTests\OrderSelfEditingRouteTests.cs" />
+    <Compile Include="T03_ApiTests\UserDocumentsListTests.cs" />
+    <Compile Include="T03_ApiTests\UserDocumentsRequestTests.cs" />
     <Compile Include="T03_ApiTests\OrderCreateToShopApiKeyTests.cs" />
     <Compile Include="T03_ApiTests\OrderEditingSendTests.cs" />
-    <Compile Include="T03_ApiTests\PickupWihtCountTests.cs" />
+    <Compile Include="T03_ApiTests\PickupWihtCountDriverDpdTests.cs" />
     <Compile Include="T03_ApiTests\UserBarcodeTests.cs" />
     <Compile Include="T03_ApiTests\OrderWihtIdTests.cs" />
     <Compile Include="T03_ApiTests\ShopDeliveryCompanyTests.cs" />
@@ -129,6 +131,7 @@
     <Compile Include="T03_ApiTests\OrderNotFoundTests.cs" />
     <Compile Include="T03_ApiTests\OrderStatusDatePredictTests.cs" />
     <Compile Include="T03_ApiTests\UserCreateUserTests.cs" />
+    <Compile Include="T03_ApiTests\UserLkAuthTests.cs" />
     <Compile Include="T03_ApiTests\UserWarehouseEditTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseInfoTests.cs" />
     <Compile Include="T03_ApiTests\WarehouseCreateTests.cs" />
