Правка файла для игнора

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-Autotests.Suites/bin/*
-Autotests.Suites/obj/*
-Autotests.Utilities/bin/*
-Autotests.Utilities/obj/*
-Autotests.WebPages/bin/*
-Autotests.WebPages/obj/*
+Autotest.Core/Autotests.Utilities/bin/*
+Autotest.Core/Autotests.Utilities/obj/*
+Autotest.Core/Autotests.WebPages/bin/*
+Autotest.Core/Autotests.WebPages/bin/*
+Autotest.Test.AdminAndSupportTests/Autotests.Suites/bin/*
+Autotest.Test.AdminAndSupportTests/Autotests.Suites/obj/*
+Autotest.Test.ApiTests/Autotests.Suites/bin/*
+Autotest.Test.ApiTests/Autotests.Suites/obj/*
+Autotest.Test.ClearTests/Autotests.Suites/bin/*
+Autotest.Test.ClearTests/Autotests.Suites/obj/*
+Autotest.Test.CreateTests/Autotests.Suites/bin/*
+Autotest.Test.CreateTests/Autotests.Suites/obj/*
+Autotest.Test.UserTests/Autotests.Suites/bin/*
+Autotest.Test.UserTests/Autotests.Suites/obj/*
+Assemblies/Temp/*
